syntax = "proto3";

package user;

service UserService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message User {
  int64 id = 1;
  string name = 2;
  string email = 3;
}

message CreateUserRequest { string name = 1; string email = 2; }
message GetUserRequest { int64 id = 1; }
message ListUsersRequest {}
message ListUsersResponse { repeated User users = 1; }
message UpdateUserRequest { int64 id = 1; string name = 2; string email = 3; }
message DeleteUserRequest { int64 id = 1; }

message UserResponse { User user = 1; }
message DeleteUserResponse { bool success = 1; }
